Bug 48777 - While tap-dragging: when approaching the touchpad edge, the cursor snaps to the display edge
Summary: While tap-dragging: when approaching the touchpad edge, the cursor snaps to t...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/synaptics (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-16 10:35 UTC by Gavin Troy
Modified: 2012-04-19 16:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Suggested patch (abs) (505 bytes, application/octet-stream)
2012-04-16 10:35 UTC, Gavin Troy
no flags Details

Description Gavin Troy 2012-04-16 10:35:56 UTC
Created attachment 60076 [details]
Suggested patch (abs)

1. Double tap and hold in the center of the touchpad.
2. Move your finger slowly towards an edge or corner.
3. When you get close to the edge, the cursor will often jump from its current position to the very edge/corner of the display.


Bisecting leads to c25ff549c9636ad89a81fbf364159c7f040d163b as the first bad commit.
http://cgit.freedesktop.org/xorg/driver/xf86-input-synaptics/commit/?id=c25ff549c9636ad89a81fbf364159c7f040d163b

I played around and added some debug lines, and it seems that inside get_delta,
	hw->millis - HIST(0).millis
is sometimes returning a negative value. This causes dtime to become an extremely large value instead of an extremely small value.

Although finding the root cause would be nice, suggested patch just ensures the above evaluation is never negative.
Comment 1 Peter Hutterer 2012-04-18 23:43:28 UTC
http://patchwork.freedesktop.org/patch/10022/
Comment 2 Gavin Troy 2012-04-19 11:42:21 UTC
> http://patchwork.freedesktop.org/patch/10022/

Works fine for me. Thanks.
Comment 3 Peter Hutterer 2012-04-19 16:20:43 UTC
commit 3822d58777768b351940e58d8608ba9ab877d134
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Thu Apr 19 16:39:41 2012 +1000

    Ensure hw millis are monotonic (#48777)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.