Ensure hw millis are monotonic (#48777)

The eventcomm backend takes the timestamp from the kernel, but the timer
uses the timer's "now". This timestamp may be later than the one from the
next event we read from the kernel, causing a negative dtime in get_delta()
and a cursor jump by (unsigned int)-1.

Ensure that the new event's timestamp is at least the last used one.

X.Org Bug 48777 <http://bugs.freedesktop.org/show_bug.cgi?id=48777>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Peter Hutterer <peter.hutterer@who-t.net>
Tested-by: Gavin Troy <gavtroy@gmail.com>